--- a/Assets/style.css
+++ b/Assets/style.css
@@ -93,3 +93,64 @@ body {
 .quiz-content .start-button:active {
   opacity: 0.5;
 }
+
+.popup-info {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 700px;
+  background: #9FA8EB;
+  border-radius: 5px;
+  padding: 10px;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.popup-info h2 {
+  font-size: 50px;
+  font-weight: 1000;
+  color: #3D393B;
+}
+
+.popup-info .info {
+  font-size: 25px;
+  font-weight: 250;
+  display: flex;
+  flex-direction: column;
+  color: #3D393B;
+  margin: 5px 0;
+}
+
+.popup-info .button-group {
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ border-top: 1px solid #DACAC4;
+ margin-top: 7px;
+ padding: 10px;
+}
+
+.popup-info .button-group .info-button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4120A9;
+  color: white;
+  width: 125px;
+  height: 50px;
+  font-size: 20px;
+  border-radius: 25px;
+  border: none;
+  cursor: pointer;
+  text-decoration: none;
+  
+}
+
+.popup-info .button-group .info-button:hover {
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
+}
+
+.popup-info .button-group .info-button:active {
+  opacity: 0.5;
+}
